--- a/report.ipynb
+++ b/report.ipynb
@@ -73,6 +73,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "07ba9b24-659a-4546-9671-70983828dfd8",
+   "metadata": {},
+   "source": [
+    "### Summary of Findings\n",
+    "\n",
+    "- Through exploration and modeling whether a student was enrolled in the semester between the retention calculation and the base semester showed the most drastic retention difference. Freshman students showed a much lower retention then the other classes. Lastely term_gpa was much lower in students that were not retained.\n",
+    "\n",
+    "- Each individual row is considered an individual observation of retention year over a year based on variables provided. Individual students show up in dataset multiple times. So this is not a measure of whether an individual student is retained over time but a measure of individual instances of year over year retention. With more data provided and further exploration and analysis, more could be done to understand drivers of individual student retention."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "79a1eae5-d631-44a0-9b4e-a38d13b12f84",
    "metadata": {},
    "source": [
@@ -131,17 +143,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "id": "7f924fc1-8121-4e1e-bd7e-514a6f090686",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pandas._config.config.DictWrapper at 0x7f8a295e2f40>"
+       "<pandas._config.config.DictWrapper at 0x7f8a2ad25a30>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +164,8 @@
     "# Import for Data acquisition and prep\n",
     "import wrangle\n",
     "# Using the acquire and prep function found in the wrangle.py file we assign the dataframe\n",
-    "students , sparce_dummies = wrangle.prep_student_data(wrangle.acquire_student_data())\n",
+    "df = wrangle.acquire_student_data()\n",
+    "students , sparce_dummies = wrangle.prep_student_data(df)\n",
     "\n",
     "# Import warnings to remove popup warnings\n",
     "import warnings\n",
@@ -168,8 +181,8 @@
    "source": [
     "The data was cleaned in the following steps:\n",
     "\n",
-    "1. Column names were reformated for usability.\n",
-    "2. cip code descriptions were acquired from a csv and merged to match cip codes in the student dataframe.\n",
+    "1. Column names were reformated for usability\n",
+    "2. cip code descriptions were acquired from a csv and merged to match cip codes in the student dataframe\n",
     "3. age_at_start_term column was cleaned of spaces\n",
     "4. categorical data that had a boolean shape were encoded to boolean values\n",
     "5. the rest of the categorical data was one hot encoded and added to the dataframe\n",
@@ -196,13 +209,15 @@
     "- The train sample represents 56 % of the data and is used to train the model\n",
     "- The validate sample represents 24 % of the data and is used to test for overfitting\n",
     "- The test sample reresents 20 % of the data and is used to test our top model\n",
-    "- All splits were done with a seed of 123 and churn used as the stratify variable to ensure a balanced ratio in samples"
+    "- All splits were done with a seed of 1729 and retained was used as the stratify variable to ensure a balanced ratio in samples"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "d4073264-1aea-49ef-a75d-b229c1258d79",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Data Context"
    ]
@@ -212,8 +227,9 @@
    "id": "1428d5f1-b295-4aaa-8971-59e071770fb1",
    "metadata": {},
    "source": [
-    "- After acquistion and preperation of data we are left with 140,800 rows with 84 columns. \n",
-    "- With an average overall retention rate of 70%. \n",
+    "- Original DataFrame is 448,176 rows with 22 columns\n",
+    "- After acquistion and preperation of data we are left with 448,086 rows with 87 columns. \n",
+    "- With an average overall retention rate of 68%. \n",
     "- Each row represents an individual instance of year over year retention. Individual students are reperesented once for every semester they attended."
    ]
   },
