--- a/wrangle.ipynb
+++ b/wrangle.ipynb
@@ -555,7 +555,7 @@
     "tags": []
    },
    "source": [
-    "### efc"
+    "### efc "
    ]
   },
   {
@@ -791,7 +791,7 @@
     "tags": []
    },
    "source": [
-    "### hs_gpa"
+    "### hs_gpa (hs_gpa does not change with a student over time but term_gpa does.)"
    ]
   },
   {
